# func_generator

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: generator.rs  lib.rs  main.rs
